--- a/force-app/main/default/classes/SummitEventsRegisterAppointmentCtlr.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterAppointmentCtlr.cls
@@ -157,7 +157,6 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
                             if (apt.Appointment_Category__c != null) {
                                 Map<String, String> dependencies = SummitEventsShared.getDependentSelectOptions('Summit_Events_Appointment_Type__c', 'Appointment_Category__c', 'Appointment_Type__c', apt.Appointment_Category__c);
                                 List<String> pickListItems = new List<String>();
-                                System.debug(dependencies);
                                 if (dependencies.size() > 0) {
                                     for (String item : dependencies.keySet()) {
                                         pickListItems.add(dependencies.get(item));
@@ -192,7 +191,7 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
 
 
     public PageReference checkEventDetails() {
-        return SummitEventsShared.checkForEvent();
+        return SummitEventsShared.checkForEvent('appointment');
     }
 
     public PageReference saveOptions() {
