--- a/force-app/test/default/classes/SummitEventsConfirmation_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsConfirmation_TEST.cls
@@ -14,7 +14,7 @@ private class SummitEventsConfirmation_TEST {
             PageReference pageRef = Page.SummitEventsConfirmation;
             pageRef.getParameters().put('adminopen', 'true');
             Test.setCurrentPage(pageRef);
-            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, evtReg.Id);
+            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, evtReg.Id, true);
             SummitEventsConfirmationController confirmCtrl = new SummitEventsConfirmationController();
             confirmCtrl.eventIsClosed = false;
             confirmCtrl.checkEventDetails();
@@ -63,7 +63,7 @@ private class SummitEventsConfirmation_TEST {
             PageReference pageRef = Page.SummitEventsConfirmation;
             pageRef.getParameters().put('adminopen', '1');
             Test.setCurrentPage(pageRef);
-            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
+            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id, true);
             SummitEventsConfirmationController confirmCtrl = new SummitEventsConfirmationController();
             confirmCtrl.checkEventDetails();
             Summit_Events_Registration__c checkRegistrationStatus = [
@@ -88,7 +88,7 @@ private class SummitEventsConfirmation_TEST {
             PageReference pageRef = Page.SummitEventsConfirmation;
 
             Test.setCurrentPage(pageRef);
-            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
+            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id, true);
             SummitEventsConfirmationController confirmCtrl = new SummitEventsConfirmationController();
             confirmCtrl.checkEventDetails();
             Summit_Events_Registration__c checkRegistrationStatus = [
@@ -136,7 +136,7 @@ private class SummitEventsConfirmation_TEST {
             PageReference pageRef = Page.SummitEventsConfirmation;
             pageRef.getParameters().put('adminopen', 'true');
             Test.setCurrentPage(pageRef);
-            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
+            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id, true);
             SummitEventsConfirmationController confirmCtrl = new SummitEventsConfirmationController();
 
             confirmCtrl.checkEventDetails();
@@ -204,7 +204,7 @@ private class SummitEventsConfirmation_TEST {
             PageReference pageRef = Page.SummitEventsConfirmation;
             pageRef.getParameters().put('adminopen', 'true');
             Test.setCurrentPage(pageRef);
-            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
+            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id, true);
             SummitEventsConfirmationController confirmCtrl = new SummitEventsConfirmationController();
 
             List<String> pageMessages = new List<String>();
@@ -217,7 +217,7 @@ private class SummitEventsConfirmation_TEST {
 
             Test.startTest();
 
-            PageReference confirmPageReg = confirmCtrl.gatherPaymentInformation();
+            PageReference confirmPageReg = confirmCtrl.checkForPayment();
             System.assertEquals(confirmPageReg, null);
 
             Summit_Events_Registration__c checkRegistrationStatus = [
@@ -275,7 +275,7 @@ private class SummitEventsConfirmation_TEST {
             PageReference pageRef = Page.SummitEventsConfirmation;
             pageRef.getParameters().put('adminopen', 'true');
             Test.setCurrentPage(pageRef);
-            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
+            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id, true);
             SummitEventsConfirmationController confirmCtrl = new SummitEventsConfirmationController();
 
             List<String> pageMessages = new List<String>();
@@ -317,7 +317,7 @@ private class SummitEventsConfirmation_TEST {
             PageReference pageRef = Page.SummitEventsConfirmation;
             Test.setCurrentPage(pageRef);
 
-            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
+            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id, true);
             SummitEventsConfirmationController confirmCtrl = new SummitEventsConfirmationController();
 
             List<String> pageMessages = new List<String>();
@@ -329,7 +329,7 @@ private class SummitEventsConfirmation_TEST {
             }
 
             Test.startTest();
-            PageReference confirmPageReg = confirmCtrl.gatherPaymentInformation();
+            PageReference confirmPageReg = confirmCtrl.checkForPayment();
             System.assertEquals(confirmPageReg.getParameters().get('error'), 'Payment+was+not+received.+Please+try+again.');
 
             Summit_Events_Registration__c checkRegistrationStatus = [
@@ -384,7 +384,7 @@ private class SummitEventsConfirmation_TEST {
             PageReference pageRef = Page.SummitEventsConfirmation;
             pageRef.getParameters().put('adminopen', 'true');
             Test.setCurrentPage(pageRef);
-            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id);
+            SummitEventsShared.createEncryptedCookie('Transfer', seaTestInstances[1].Id, seaTestInstances[1].Event__c, seaTestRegistration.Id, true);
             SummitEventsConfirmationController confirmCtrl = new SummitEventsConfirmationController();
 
             confirmCtrl.checkEventDetails();
